# sara_arm

./: CMakeLists.txt  README.md  package.xml
config/: pcp_params.yaml  task_j2n6.info
include/: ocs2_sara.h  pcp_sara.h  sara_arm.h
include/ocs2/: loop_sara.h  visualization_sara.h
launch/: ground_plane.launch  image_selector.launch  ocs2_manipulator_kinova_j2n6.launch  sara_full.launch
nodes/: image_converter.py
rviz/: ground_plane.rviz  image_converter.rviz  mobile_manipulator.rviz  moveit.rviz
scripts/: cloud_to_image2.py
src/: cloud_to_image.cpp  ground_plane_pub.cpp  kinova_tools.cpp  ocs2_sara.cpp  pcp_sara.cpp  pcp_service.cpp  sara_arm.cpp  sara_arm_sub.cpp
src/ocs2/: loop_sara.cpp  mrt_sara.cpp  target_sara.cpp  visualization_sara.cpp
srv/: image_to_cloud_point.srv
